--- a/taihuitao/GoodsDetailsTableViewCell.xib
+++ b/taihuitao/GoodsDetailsTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,7 +25,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xx-xx" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mja-qZ-ulh">
-                        <rect key="frame" x="5" y="242" width="201" height="21"/>
+                        <rect key="frame" x="5" y="252" width="311" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="7g0-lt-a3Q"/>
                         </constraints>
@@ -33,8 +33,8 @@
                         <color key="textColor" red="0.4939831495" green="0.49811440709999999" blue="0.5019184351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读:xxxx" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4i-fQ-pWT">
-                        <rect key="frame" x="216" y="242" width="100" height="21"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读:xxxx" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4i-fQ-pWT">
+                        <rect key="frame" x="216" y="252" width="100" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="7BO-nX-SsZ"/>
                             <constraint firstAttribute="width" constant="100" id="awB-bJ-iTL"/>
@@ -44,23 +44,23 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章图文混排介绍" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ob0-Bc-1YO">
-                        <rect key="frame" x="10" y="268" width="301" height="107.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                        <rect key="frame" x="10" y="278" width="301" height="97.5"/>
+                        <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".PingFang SC" pointSize="18"/>
                         <color key="textColor" red="0.2781479657" green="0.2823043764" blue="0.28649967910000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这是标题" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IbU-GG-Lj0">
-                        <rect key="frame" x="5" y="215" width="311" height="21"/>
+                        <rect key="frame" x="5" y="225" width="311" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="dSG-QY-Ryy"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                         <color key="textColor" red="0.2781479657" green="0.2823043764" blue="0.28649967910000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="leading" secondItem="Mja-qZ-ulh" secondAttribute="trailing" constant="10" id="2rG-5Z-5DT"/>
+                    <constraint firstItem="V4i-fQ-pWT" firstAttribute="leading" secondItem="Mja-qZ-ulh" secondAttribute="trailing" constant="-100" id="2rG-5Z-5DT"/>
                     <constraint firstAttribute="trailing" secondItem="V4i-fQ-pWT" secondAttribute="trailing" constant="5" id="HbP-BG-Qee"/>
                     <constraint firstItem="V4i-fQ-pWT" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="6" id="OOx-Ta-AFr"/>
                     <constraint firstItem="Mja-qZ-ulh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="OvE-gr-gBd"/>
@@ -72,7 +72,7 @@
                     <constraint firstItem="6p9-JZ-wOm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="jTf-MB-EI9"/>
                     <constraint firstItem="IbU-GG-Lj0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="mkw-ag-V7P"/>
                     <constraint firstAttribute="trailing" secondItem="6p9-JZ-wOm" secondAttribute="trailing" constant="5" id="pmh-Y3-p6z"/>
-                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="top" secondItem="6p9-JZ-wOm" secondAttribute="bottom" constant="10" id="poh-46-Y6F"/>
+                    <constraint firstItem="IbU-GG-Lj0" firstAttribute="top" secondItem="6p9-JZ-wOm" secondAttribute="bottom" constant="20" id="poh-46-Y6F"/>
                     <constraint firstItem="Mja-qZ-ulh" firstAttribute="top" secondItem="IbU-GG-Lj0" secondAttribute="bottom" constant="6" id="pwf-ge-PI2"/>
                     <constraint firstAttribute="trailing" secondItem="IbU-GG-Lj0" secondAttribute="trailing" constant="5" id="tZg-Cj-Bpi"/>
                 </constraints>
