--- a/taihuitao/RecommendCollectionViewCell.xib
+++ b/taihuitao/RecommendCollectionViewCell.xib
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RecommendCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="188" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="188" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="188" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="188" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Joc-W5-o2B">
-                        <rect key="frame" x="0.0" y="0.0" width="188" height="70"/>
+                        <rect key="frame" x="0.0" y="0.0" width="188" height="188"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="188" id="V0Y-cY-DAC"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NCd-JI-dKE">
-                        <rect key="frame" x="0.0" y="70" width="188" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="50" id="rKT-Hf-F4a"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                        <rect key="frame" x="0.0" y="198" width="188" height="92"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" red="0.2781479657" green="0.2823043764" blue="0.28649967910000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -34,13 +34,13 @@
             </view>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="NCd-JI-dKE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CCc-gK-t2r"/>
-                <constraint firstItem="Joc-W5-o2B" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Fvj-lU-p70"/>
-                <constraint firstAttribute="trailing" secondItem="Joc-W5-o2B" secondAttribute="trailing" id="JSE-iv-acs"/>
-                <constraint firstAttribute="trailing" secondItem="NCd-JI-dKE" secondAttribute="trailing" id="KlM-af-prM"/>
-                <constraint firstItem="Joc-W5-o2B" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RVJ-Am-ge1"/>
-                <constraint firstItem="NCd-JI-dKE" firstAttribute="top" secondItem="Joc-W5-o2B" secondAttribute="bottom" id="cRf-lE-nb4"/>
-                <constraint firstAttribute="bottom" secondItem="NCd-JI-dKE" secondAttribute="bottom" id="wcO-0K-N8d"/>
+                <constraint firstItem="NCd-JI-dKE" firstAttribute="top" secondItem="Joc-W5-o2B" secondAttribute="bottom" constant="10" id="7Z4-B2-JwP"/>
+                <constraint firstItem="NCd-JI-dKE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9yD-pP-Zmk"/>
+                <constraint firstItem="Joc-W5-o2B" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HEZ-yj-RWZ"/>
+                <constraint firstAttribute="trailing" secondItem="NCd-JI-dKE" secondAttribute="trailing" id="N3v-n0-qjF"/>
+                <constraint firstItem="Joc-W5-o2B" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Q9A-uK-wqW"/>
+                <constraint firstAttribute="bottom" secondItem="NCd-JI-dKE" secondAttribute="bottom" constant="10" id="ht9-9N-jaH"/>
+                <constraint firstAttribute="trailing" secondItem="Joc-W5-o2B" secondAttribute="trailing" id="nWQ-wM-EZV"/>
             </constraints>
             <size key="customSize" width="188" height="120"/>
             <connections>
