--- a/taihuitao/PersonalTableViewController.xib
+++ b/taihuitao/PersonalTableViewController.xib
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PersonalTableViewController">
             <connections>
                 <outlet property="tableViewHeaderView" destination="fdz-Pd-tQC" id="7Cd-Yy-1hx"/>
+                <outlet property="userHeaderImageBtn" destination="1RT-a1-dBP" id="SBZ-IC-YUg"/>
+                <outlet property="userNameLabel" destination="1yr-Hd-lkM" id="vZm-YC-tFq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,7 +32,7 @@
                             <constraint firstAttribute="height" constant="50" id="4Jm-dh-1Iy"/>
                             <constraint firstAttribute="width" constant="50" id="G3u-8o-kBH"/>
                         </constraints>
-                        <state key="normal" image="default_user_loading_icon_100x100_"/>
+                        <state key="normal" image="btg_icon_avatar_placeholder"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="25"/>
@@ -87,7 +89,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="BHj-GU-hj0" firstAttribute="leading" secondItem="fdz-Pd-tQC" secondAttribute="leading" constant="50" id="3i2-TE-hl3"/>
                     <constraint firstAttribute="bottom" secondItem="sI0-li-gMU" secondAttribute="bottom" constant="15" id="5BX-eE-7BL"/>
@@ -119,6 +120,6 @@
         </tableView>
     </objects>
     <resources>
-        <image name="default_user_loading_icon_100x100_" width="100" height="100"/>
+        <image name="btg_icon_avatar_placeholder" width="50" height="50"/>
     </resources>
 </document>
