--- a/taihuitao/BrandCollectionViewCell.xib
+++ b/taihuitao/BrandCollectionViewCell.xib
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BrandCollectionViewCell">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="gTV-IL-0wX" customClass="BrandCollectionViewCell">
             <rect key="frame" x="0.0" y="0.0" width="139" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="139" height="44"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="未加载好图片长" translatesAutoresizingMaskIntoConstraints="NO" id="D0J-tk-ftl">
-                        <rect key="frame" x="0.0" y="0.0" width="139" height="44"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="未加载好图片长" translatesAutoresizingMaskIntoConstraints="NO" id="D0J-tk-ftl">
+                        <rect key="frame" x="10" y="10" width="119" height="24"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </imageView>
                 </subviews>
             </view>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="D0J-tk-ftl" secondAttribute="trailing" id="3oG-n0-35r"/>
-                <constraint firstItem="D0J-tk-ftl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9La-hY-2tN"/>
-                <constraint firstAttribute="bottom" secondItem="D0J-tk-ftl" secondAttribute="bottom" id="DMa-bl-BOh"/>
-                <constraint firstItem="D0J-tk-ftl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="tWn-zS-YQq"/>
+                <constraint firstAttribute="bottom" secondItem="D0J-tk-ftl" secondAttribute="bottom" constant="10" id="IRK-Aq-Sig"/>
+                <constraint firstAttribute="trailing" secondItem="D0J-tk-ftl" secondAttribute="trailing" constant="10" id="K28-cm-vPb"/>
+                <constraint firstItem="D0J-tk-ftl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="RLD-SE-d5y"/>
+                <constraint firstItem="D0J-tk-ftl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="YON-Jb-Xmc"/>
             </constraints>
             <size key="customSize" width="139" height="44"/>
             <connections>
